--- a/stilus.css
+++ b/stilus.css
@@ -1,3 +1,27 @@
+*{
+    border: 1px solid blue;
+    
+    color: #040;
+}
+
+html{
+    background-color: #fff;
+}
+
+body{
+    background-color: #dff;
+    width: 80%;
+    margin: auto;
+}
+
 h2 {
     color: #004400;
   }
+
+ul{
+    clear: both;
+}
+
+.mono {
+    font-family: "Monotype Corsiva";
+}
